[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "fastapi>=0.138.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.43.0",
    "pygame>=2.6.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "supabase>=2.31.0",
]

