[project]
name = "voice-agent"
version = "2.0.0"
description = "RAG-based Voice Agent — upload PDFs, ask questions, get audio answers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "fastapi>=0.115.0",
    "openai>=1.40.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.31.0",
    "supabase>=2.5.0",
    "uvicorn>=0.30.0",
]
